# ExynNix

./: .gitmodules  README.md  gradle.properties  gradlew  local.properties.template  settings.gradle.kts
.github/workflows/: build-apk.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/bridge/: backend_router.cpp  backend_router.h  benchmark_runner.cpp  benchmark_runner.h  cpu_backend.cpp  cpu_backend.h  exynix_jni.cpp  hardware_probe.cpp  hardware_probe.h  inference_session.h  memory_tracker.cpp  memory_tracker.h  nnapi_backend.cpp  nnapi_backend.h  thermal_monitor.cpp  thermal_monitor.h  tokenizer.cpp  tokenizer.h  vulkan_backend.cpp  vulkan_backend.h
app/src/main/java/com/exynix/studio/: ExynNixApp.kt  MainActivity.kt
app/src/main/java/com/exynix/studio/data/models/: Models.kt
app/src/main/java/com/exynix/studio/data/repository/: InferenceRepository.kt
app/src/main/java/com/exynix/studio/di/: AppModule.kt
app/src/main/java/com/exynix/studio/inference/: ModelDownloadService.kt
app/src/main/java/com/exynix/studio/inference/jni/: InferenceJni.kt
app/src/main/java/com/exynix/studio/ui/components/: Components.kt
app/src/main/java/com/exynix/studio/ui/screens/: BenchmarkScreen.kt  ChatScreen.kt  DashboardScreen.kt  ModelManagerScreen.kt  SettingsScreen.kt
app/src/main/java/com/exynix/studio/ui/theme/: Theme.kt
app/src/main/java/com/exynix/studio/viewmodel/: MainViewModel.kt  ViewModelFactory.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
